--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "redis-commander": "^0.7.2"
   }
 }
